--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,8 @@ buildscript {
         compose_version = '1.2.0-beta02'
         roomVersion = "2.4.2"
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+}
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.2.0' apply false
     id 'com.android.library' version '7.2.0' apply false
